WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115484
[GTK] Segmentation Fault with Romanian locale. Evolution not starting.
https://bugs.webkit.org/show_bug.cgi?id=115484
Summary
[GTK] Segmentation Fault with Romanian locale. Evolution not starting.
Amuraritei Andrei
Reported
2013-05-01 12:09:19 PDT
Description: Evolution crashes with this error: GLib-GObject-CRITICAL **: g_param_spec_internal: assertion `!(flags & G_PARAM_STATIC_NAME) || is_canonical (name)' failed. When started with LC_ALL=C, all seems to work ok. My system locale is set to Polish. The bug is mentioned in this forum thread:
https://bbs.archlinux.org/viewtopic.php?pid=1263148
. Also gnome online accounts are affected by this - when adding account with Google, Facebook or Windows Live, it crashes. Also this happens for Romanian locale (ro_RO.UTF8). Changing locale, or removing /usr/share/locale/pl/LC_MESSAGES/WebKitGTK-3.0.mo, like specified in the bug posted on
https://bugs.archlinux.org/task/34926
lets Evolution start correctly using English language.
Attachments
Patch
(2.17 KB, patch)
2013-05-01 12:31 PDT
,
Zan Dobersek
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2
(855.21 KB, application/zip)
2013-05-01 13:22 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Amuraritei Andrei
Comment 1
2013-05-01 12:10:36 PDT
This is the error message received while starting Evolution in the terminal: (evolution:22604): GLib-GObject-CRITICAL **: g_param_spec_internal: assertion `!(flags & G_PARAM_STATIC_NAME) || is_canonical (name)' failed [1] 22604 segmentation fault (core dumped)
Zan Dobersek
Comment 2
2013-05-01 12:20:13 PDT
https://bugs.archlinux.org/task/34926
also gives specific information on what's wrong, albeit a bit aggressively.
> Permanent fix: Stab the face of whoever authored the 386th line of Source/WebKit/gtk/webkit/webkitviewportattributes.cpp in WebKit source code. (It erroneously marks a string for translation, which the overzealous and unsuspecting translator picked up.)
and
> Oh, just noticed they also earned it for the 406th line in the same file. (Same problem.) Wonder if there is more.
Zan Dobersek
Comment 3
2013-05-01 12:24:16 PDT
Trivial grepping shows these are the only two cases.
Zan Dobersek
Comment 4
2013-05-01 12:31:07 PDT
Created
attachment 200235
[details]
Patch
Build Bot
Comment 5
2013-05-01 13:22:23 PDT
Comment on
attachment 200235
[details]
Patch
Attachment 200235
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/362112
New failing tests: fast/frames/crash-remove-iframe-during-object-beforeload.html
Build Bot
Comment 6
2013-05-01 13:22:24 PDT
Created
attachment 200238
[details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
Zan Dobersek
Comment 7
2013-05-02 07:21:26 PDT
Comment on
attachment 200235
[details]
Patch Clearing flags on attachment: 200235 Committed
r149486
: <
http://trac.webkit.org/changeset/149486
>
Zan Dobersek
Comment 8
2013-05-02 07:21:34 PDT
All reviewed patches have been landed. Closing bug.
Amuraritei Andrei
Comment 9
2013-05-02 10:18:11 PDT
(In reply to
comment #8
)
> All reviewed patches have been landed. Closing bug.
Thanks for the prompt resolve. Happy Easter.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug