Segmentation Fault with Romanian locale. Evolution not starting. https://bugs.webkit.org/show_bug.cgi?id=115484

Reviewed by Darin Adler.

Do not translate the property names that are being passed to the g_param_spec_boolean
method - it is not required and is causing segfaults with various locales.

* webkit/webkitviewportattributes.cpp:
(webkit_viewport_attributes_class_init):


Canonical link: https://commits.webkit.org/133958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149486 268f45cc-cd09-0410-ab3c-d52691b4dbfc